# BlenderHelloWorld

./: .dockerignore  Dockerfile  DockerfilePythonBase  README.md  ruff.toml  setup.cfg
blenderhelloworld/: import_test.py  launch.py  main.py
blenderhelloworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
