[metadata]
# replace with your username:
name = blenderhelloworld
version = 0.0.1
author = Roland Deschain
author_email = 
description = Basic template setup for blender scripting projects
long_description = file: README.md
long_description_content_type = text/markdown
url = TODO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11

install_requires =
    numpy>=1.24
    pillow>=10.3.0

[options.extras_require]
dev =
